--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1 class="fb">Facebook</h1>
             <input type="email" placeholder="Type your email">
             <input type="password" placeholder="Type your password">
+            <button class="account2">Login</button>
             <button class="account">Create account</button>
         </form>
     </div>
